Fixed minor layout issues, fixed bug where feature-movie panels were not populated to page.

--- a/assets/style.css
+++ b/assets/style.css
@@ -150,10 +150,10 @@ Songs Row
 }
 
 .song-wrapper {
-    margin-top: 10px;
+    margin-top: 20px;
     color: #fff;
-    max-width: 80%;
-    height: 400px;
+    width: 80%;
+    height: 450px;
     padding: 10px;
 }
 
@@ -191,7 +191,7 @@ Songs Row
 }
 
 .song-image {
-    width: 150px;
+    height: 150px;
     border: 2px solid #fff;
     border-radius: 2%;
     margin: 10px;
